--- a/bejelentkezes/html/bejelentkezes.html
+++ b/bejelentkezes/html/bejelentkezes.html
@@ -1,8 +1,13 @@
-<div class="divkeret">
-    <form class="form" method="post">
-        <input class="input" type="text" name="username" id="username" placeholder="Felhasználónév"><br>
-        <input class="input" type="password" name="pwd" placeholder="Jelszó"><br>
-        <button class="button" name="submit">Log In</button>
-        <button class="button" name="submit1" type="submit" formaction="register.php">Sign In</button>
-    </form>
+<div class="row justify-content-center align-items-center">
+    <div class="form-group col-sm-2 shadow p-3 mb-5 bg-body rounded h-100">
+        <form method="post">
+            <label>Felhasználó név</label>
+            <input type="text" name="username" class="form-control" placeholder="Felhasználónév">
+            <label>Jelszó</label>
+            <input type="password" name="pwd" class="form-control" placeholder="Jelszó">
+            <button type="submit" class="btn btn-dark mt-4" name="submit">Bejelentkezés</button>
+            <button type="submit" class="btn btn-dark mt-4" name="submit1"
+                formaction="register.php">Regisztráció</button>
+        </form>
+    </div>
 </div>
