--- a/bejelentkezes/html/login.html
+++ b/bejelentkezes/html/login.html
@@ -1,10 +1,24 @@
-    <header id="navigation-bar">
-        <nav aria-label="Main Navigation">
-            <ul>
-                <a class="button" href="kezdo.php">Kezdőlap</a>
-                <a class="button" href="kezdo.php">Rólunk</a>
-                <a class="button" href="kezdo.php">Hogyan csináld</a>
-                <a class="button" href="bejelent.php">Bejelentkezés</a>
+    <header >
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <a class="navbar-brand w3-xlarge" href="#"><i class="fa fa-home"></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link " href="kezdo.php">Kezdőlap</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="kezdo.php">Rólunk</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="kezdo.php">Hogyan csináld</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="bejelent.php">Bejelentkezés</a>
+                </li>
             </ul>
-        </nav>
+        </div>  
+      </nav>
     </header>
