--- a/bejelentkezes/html/logout.html
+++ b/bejelentkezes/html/logout.html
@@ -1,11 +1,27 @@
-<header id="navigation-bar">
-    <nav aria-label="Main Navigation">
-        <ul>
-            <a class="button" href="kezdo.php">Kezdőlap</a>
-            <a class="button" href="adatok.php">Adatok</a>
-            <a class="button" href="monitor2.php">Monitor</a>
-            <a class="button" href="kimutatas.php">Kimutatások</a>
-            <a class="button" href="logout.php">Kijelentkezés</a>
-        </ul>
-    </nav>
+<header>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <a class="navbar-brand w3-xlarge" href="#"><i class="fa fa-home"></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link " href="kezdo.php">Kezdőlap</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="adatok.php">Adatok</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="monitor2.php">Monitor</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="kimutatas.php">Kimutatások</a>
+                </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="logout.php">Kijelentkezés</a>
+                </li>
+            </ul>
+        </div>  
+      </nav>
 </header>
