--- a/bejelentkezes/html/adatok.html
+++ b/bejelentkezes/html/adatok.html
@@ -22,5 +22,5 @@
             </select><br>
         </div>
     
-    <button class="btn btn-dark mt-4" name="submit" type="submit">Küldés</button>
+    <button type="submit" class="btn btn-dark mt-4" name="submit" type="submit">Küldés</button>
     </div>
